single rotation double rotation

--- a/Jupyter_AVL_Visualization.ipynb
+++ b/Jupyter_AVL_Visualization.ipynb
@@ -203,12 +203,9 @@
     "    # function to find the position where the new element has to be inserted\n",
     "\n",
     "    def findInsert(self, e, curnode):\n",
-    "        rate(1)\n",
-    "        if curnode.currobj != None:         #ADT vs visualisation exec\n",
-    "            self.pointer.pos=curnode.currobj.pos\n",
-    "\n",
+    "        \n",
     "        if curnode != None:\n",
-    "            if e < curnode.element:\n",
+    "             < curnode.element:\n",
     "                if curnode.leftchild == None:\n",
     "                    return curnode\n",
     "                else:\n",
